--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.15",
     "concurrently": "^7.3.0",
+    "less": "^4.1.3",
     "pinia": "^2.0.18",
     "prismjs": "^1.28.0",
     "vite-plugin-prismjs": "^0.0.8",
